tooling/nargo_cli/tests/snapshots/execution_success/unused_array_get_known_index_in_bounds/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() {
    // Safety: comment added by `nargo expand`
    let result: Field = unsafe { foo([0_u8]) };
    println(result);
}

unconstrained fn foo(bytes: [u8; 1]) -> Field {
    for _ in 0_u32..bytes.len() {
        let _: u8 = bytes[0_u32];
    }
    0_Field
}
